--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,17 @@
-### AL ###
-#Template for AL projects for Dynamics 365 Business Central
-#launch.json folder
-.vscode/
-#Cache folder
-.alcache/
-#Symbols folder
-.alpackages/
-#Snapshots folder
-.snapshots/
-#Testing Output folder
-.output/
-#Extension App-file
-*.app
-#Rapid Application Development File
-rad.json
-#Translation Base-file
-*.g.xlf
-#License-file
-*.flf
-#Test results file
-TestResults.xml
+# Node.js
+node_modules/
+npm-debug.log
+.DS_Store
+
+# Next.js
+.next/
+out/
+build/
+
+# Logs
+logs/
+*.log
+
+# OS Files
+Thumbs.db
+ehthumbs.db
